# shelf

./: .gitignore  .luacheckrc  Cargo.toml  README.md  build.rs  shelf.toml
Prelude/: Env  Prelude  Prelude.dhall  Stew
Prelude/File/: LinkType
Prelude/FileProcess/: Type.dhall
Prelude/Hook/: Type
Prelude/Package/: Package  Package.dhall  Type.dhall
Prelude/Template/: Engine  Engine.dhall  Type.dhall
Prelude/TemplateProcess/: Type.dhall
Prelude/Tree/: Type.dhall  default.dhall
cfglib/package/: package.dhall
libshelf/: Cargo.toml  build.rs  selene.toml
libshelf/src/: action.rs  cache.rs  data.rs  error.rs  fsutil.rs  globals.lua  graph.rs  journal.rs  lib.rs  link.rs  load.rs  main.rs  object.rs  op.rs  spec.rs  templating.rs  tree.rs
libshelf/src/action/: command.rs  error.rs  function.rs  generated.rs  link.rs  mkdir.rs  mod.rs  resolve.rs  template.rs  tree.rs  write.rs
libshelf/src/graph/: action.rs  mod.rs
libshelf/src/journal/: iter.rs  mod.rs  rollback.rs  transaction.rs  writer.rs
libshelf/src/load/: globals.lua  mod.rs  specobject.rs
libshelf/src/op/: command.rs  copy.rs  create.rs  ctx.rs  error.rs  function.rs  journal.rs  link.rs  mkdir.rs  mod.rs  rm.rs  write.rs
libshelf/src/spec/: lua.rs  mod.rs  tree.rs
src/: action.rs  cache.rs  cli.rs  config.rs  dependency.rs  error.rs  format.rs  fse.rs  globals.lua  graph.rs  lib.rs  link.rs  linker.rs  load.rs  loader.lua  loader.rs  main.rs  map.rs  op.rs  package.rs  pathutil.rs  pl.rs  prettylog.rs  spec.rs  symlink.rs  templating.rs  tree.rs
src/action/: generated.rs  link.rs  mkdir.rs  mod.rs  object.rs  template.rs  write.rs
src/graph/: action.rs  mod.rs
src/journal/: iter.rs  mod.rs  rollback.rs  transaction.rs  writer.rs
src/load/: globals.lua  mod.rs
src/op/: command.rs  copy.rs  create.rs  error.rs  function.rs  journal.rs  link.rs  mkdir.rs  mod.rs  rm.rs  write.rs
src/package/: config.rs  lua.rs  map.rs  mod.rs
src/spec/: lua.rs  mod.rs
src/template/: gotmpl.rs  hbs.rs  mod.rs
src/templating/: gotemplate.rs  gotmpl.rs  mod.rs  tera.rs
