[package]
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
description = "Keep your dotfiles tidy."
edition = "2018"
homepage = "https://github.com/Dophin2009/tidy"
license = "GPL-3.0-or-later"
name = "tidy"
repository = "https://github.com/Dophin2009/tidy.git"
version = "0.3.0"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
bunt = "0.2"
bunt-logger = "0.1"
clap = "3.0.0-beta.4"
directories-next = "2.0"
path-clean = "0.1"

libshelf = { path = "libshelf" }

[features]
default = []
lua51 = ["libshelf/lua51"]
lua52 = ["libshelf/lua52"]
lua53 = ["libshelf/lua53"]
lua54 = ["libshelf/lua54"]
luajit = ["libshelf/luajit"]
unsafe = ["libshelf/unsafe"]

[workspace]
members = [".", "libshelf"]
