[package]
name = "shelflib"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
description = "Dotfiles package manager, library."
homepage = "https://github.com/Dophin2009/shelf"
repository = "https://github.com/Dophin2009/shelf.git"
edition = "2018"

[dependencies]
glob = "0.3"
handlebars = "4.2"
liquid = "0.26"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
static_assertions = "1.1"
thiserror = "1.0"
toml = "0.5"
uuid = { version = "1.0", features = ["v4"] }

mlua = { version = "0.7", features = ["macros", "send", "serialize"] }

[dev-dependencies]
tempfile = "3.3"

[features]
default = ["luajit"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
lua-vendor = ["mlua/vendored"]
lua-unsafe = []

[workspace]
members = [".", "bin"]
