[package]
name = "shelflib"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
description = "Dotfiles package manager, library."
homepage = "https://github.com/Dophin2009/shelf"
repository = "https://github.com/Dophin2009/shelf.git"
edition = "2018"

[dependencies]
glob = "0.3.0"
handlebars = "4.2.2"
liquid = "0.26.0"
petgraph = "0.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
static_assertions = "1.1.0"
thiserror = "1.0.31"
toml = "0.5.9"
uuid = { version = "1.0.0", features = ["v4"] }

mlua = { version = "0.7.4", features = ["macros", "send", "serialize"] }

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = ["luajit"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
lua-vendor = ["mlua/vendored"]
lua-unsafe = []

[workspace]
members = [".", "bin"]
